new test structure, now using googletest

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -114,6 +114,7 @@ endif()
 # Generate test data and configure unit tests
 if(UNIT_TESTS)
     add_subdirectory(test)
+    add_subdirectory(new-test)
 endif()
 
 # Uninstallation
